# ShotCallerEngineWow

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: engine.cpp.768860C4F1EFDDDE.idx  engine.h.3CD588522B702270.idx  main.cpp.6E617667D8F3A06F.idx  parser.cpp.F02904C1D2A7410D.idx  parser.h.CF380861B0B2AED0.idx  spell_db.cpp.A9CDB321ED68B3B4.idx
include/: constants.h  engine.h  parser.h  spelldb.h
src/: constants.cpp  main.cpp  parser.cpp  spell_db.cpp  spelldb.cpp
tests/: parser_test.cpp  sample_log_50.txt
